# hello-triangle

./: hello-triangle.c  meson.build
